# src/app/models/series.js
@@ -8,7 +8,7 @@ const Series = new Schema({
   genre: { type: Schema.Types.ObjectId, ref: 'Genre' },
   isRecommend: { type: Boolean, index: true },
   cntStories: { type: Number, default: 0 },
-  coverImage: { type: String, required: true },
+  coverImageUrl: { type: String, required: true },
   lastWrittenAt: { type: Date, default: '1970-01-01' },
 }, {
   timestamps: { createdAt: true, updatedAt: true },
